--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Шепотът на Рейвънхолм</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Шепотът на Рейвънхолм</h1>
+    <div class="head">
+      <h1>Шепотът на Рейвънхолм</h1>
+      <img src="images/mansion2.jpg" alt="" />
+    </div>
+
+    <div class="navigation">
+      <ul>
+        <li><a href="characters.html">Герои</a></li>
+        <li><a href="places.html">Места</a></li>
+        <li><a href="story1.html">История</a></li>
+      </ul>
+    </div>
   </body>
 </html>
